...
                android:layout_marginTop="20dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_example_1_dsc">

                <ImageView
                    android:id="@+id/iv_image_1"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/black" />

            </androidx.cardview.widget.CardView>

...
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_example_1_dsc">

                <ImageView
                    android:id="@+id/iv_image_2"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/black" />

            </androidx.cardview.widget.CardView>

...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/cv_image_2"
                app:layout_constraintStart_toStartOf="@id/cv_image_2"
                app:layout_constraintTop_toBottomOf="@id/cv_image_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dispatch_camera"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/purple_500"
                android:text="Open Camera"
                android:textColor="@color/white"
...
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_file_dir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_50"
                        android:hint="Folder"
                        android:inputType="text"
                        android:text="folder/subfolder/"
...
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_image_dir">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_file_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_50"
                        android:hint="File Name"
                        android:inputType="text"
                        android:text="somefile"
...
                android:text="Delete file after create"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/ll_file"
                app:layout_constraintTop_toBottomOf="@id/ll_file" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_file"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/purple_500"
                android:text="Create file"
...
